--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="root">
   <header class="header">
-    <img class="header__logo" src="/images/headerlogo.svg" alt="Миниатюрная карта России">
+    <img class="header__logo" src="./images/headerlogo.svg" alt="Миниатюрная карта России">
     <div class="header__buttons">
       <p class="header__lang-link">Ru</p>
       <p class="header__lang-link">En</p>
@@ -17,7 +17,7 @@
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-    <img class="lead__image" src="/images/polka.jpg" alt="Схематичный маршрут на фон фотографии из пассажирского вагона">
+    <img class="lead__image" src="./images/polka.jpg" alt="Схематичный маршрут на фон фотографии из пассажирского вагона">
     <p class="lead__caption">Ваша полка - верхняя</p>
   </section>
   <article class="intro">
@@ -32,39 +32,39 @@
     </ul>
   </article>
   <section class="photo-grid">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-window-view.jpg" alt="Вид из окна поезда">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-cloudy-mounten.jpg" alt="Заснеженные вершины гор в облаках">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-steppe.jpg" alt="Туманная степь">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-cloudy-forest.jpg" alt="Туманный лес">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-car-on-ice.jpg" alt="Машина стоящая на замерзшем озере">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-baikal.jpg" alt="Берег байкала">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-elbrus.jpg" alt="Вершина Эльбруса">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-sign.jpg" alt="Знак пешеходного перехода где-то в глуши">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Туманные горы Камчатки">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Одинокая гора Камчатки">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-coast.jpg" alt="Берег Байкала">
-    <img class="photo-grid__item" src="/images/photo-grid/photo-grid-cloudy-peak.jpg" alt="Туманный пик горы">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-window-view.jpg" alt="Вид из окна поезда">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-cloudy-mounten.jpg" alt="Заснеженные вершины гор в облаках">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-steppe.jpg" alt="Туманная степь">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-cloudy-forest.jpg" alt="Туманный лес">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-car-on-ice.jpg" alt="Машина стоящая на замерзшем озере">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal.jpg" alt="Берег байкала">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Вершина Эльбруса">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-sign.jpg" alt="Знак пешеходного перехода где-то в глуши">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Туманные горы Камчатки">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Одинокая гора Камчатки">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-coast.jpg" alt="Берег Байкала">
+    <img class="photo-grid__item" src="./images/photo-grid/photo-grid-cloudy-peak.jpg" alt="Туманный пик горы">
   </section>
   <section class="places">
     <div class="place">
       <h2 class="place__title">Куршская коса</h2>
-      <img class="place__image" src="/images/kosa.jpg" alt="Вид на куршскую косу">
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="#">park-kosa.ru</a>
+        <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
       </div>
-      <div class="place_paragraphs">
+      <img class="place__image" src="./images/kosa.jpg" alt="Вид на куршскую косу">
+      <div class="place__paragraphs">
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
       </div>
     </div>
     <div class="place">
       <h2 class="place__title">Кольский</h2>
-      <img class="place__image" src="/images/kolksy.jpg" alt="Кольская тундра">
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="#">National Geographic</a>
+        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
       </div>
+      <img class="place__image" src="./images/kolksy.jpg" alt="Кольская тундра">
       <div class="place_paragraphs">
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -73,11 +73,11 @@
     </div>
     <div class="place">
       <h2 class="place__title">Алтай</h2>
-      <img class="place__image" src="/images/altai.jpg" alt="Лес Алтая">
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="#">Youtube</a>
+        <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">Youtube</a>
       </div>
+      <img class="place__image" src="./images/altai.jpg" alt="Лес Алтая">
       <div class="place_paragraphs">
         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -85,12 +85,12 @@
       </div>
     </div>
     <div class="place">
-      <h2 class="place__title">Замний Байкал</h2>
-      <img class="place__image" src="/images/winterbaikal.jpg" alt="Потрескавшийся лед замерзшего Байкала">
+      <h2 class="place__title">Зимний Байкал</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="#">https://vk.com/baikalmile</a>
+        <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
       </div>
+      <img class="place__image" src="./images/winterbaikal.jpg" alt="Потрескавшийся лед замерзшего Байкала">
       <div class="place_paragraphs">
         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -100,11 +100,11 @@
     </div>
     <div class="place">
       <h2 class="place__title">Карелия</h2>
-      <img class="place__image" src="/images/karelia.jpg" alt="Река в Карелии">
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="#">http://vodlozero.ru/</a>
+        <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
       </div>
+      <img class="place__image" src="./images/karelia.jpg" alt="Река в Карелии">
       <div class="place_paragraphs">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
@@ -113,18 +113,20 @@
     </div>
   </section>
   <section class="cover">
-    <div class="cover__image"></div>
-    <h2 class="cover__title">До Байкала «на собаках»</h2>
-    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    </a>
+    <img class="cover__image" src="./images/train-station.jpg" alt="Железнодорожная станция">
   </section>
   <footer class="footer">
     <div class="footer__links">
-      <a class="footer__link" href="#">Карты</a>
-      <a class="footer__link" href="#">Погода</a>
-      <a class="footer__link" href="#">Расписание</a>
-      <a class="footer__link" href="#">Календарь</a>
-      <a class="footer__link" href="#">Путешествия</a>
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
     </div>
-    <p class="footer__copyrigt">2022. Жиров Алексей</p>
+    <p class="footer__copyright">©2022. Жиров Алексей</p>
   </footer>
 </body>
