--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
-      <li class="intro__list-item">Часовых поясов <span class="intro__list-item_tickness_none">11</span></li>
-      <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-item_tickness_none">12</span></li>
-      <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-item_tickness_none">16</span></li>
-      <li class="intro__list-item">Природных заповедников <span class="intro__list-item_tickness_none">105</span></li>
-      <li class="intro__list-item">Аэропортов <span class="intro__list-item_tickness_none">241</span></li>
+      <li class="intro__list-item">Часовых поясов <span class="intro__list-item intro__list-item_tickness_none">11</span></li>
+      <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-item intro__list-item_tickness_none">12</span></li>
+      <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-item intro__list-item_tickness_none">16</span></li>
+      <li class="intro__list-item">Природных заповедников <span class="intro__list-item intro__list-item_tickness_none">105</span></li>
+      <li class="intro__list-item">Аэропортов <span class="intro__list-item intro__list-item_tickness_none">241</span></li>
     </ul>
   </article>
   <section class="photo-grid">
@@ -65,7 +65,7 @@
         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
       </div>
       <img class="place__image" src="./images/kolksy.jpg" alt="Кольская тундра">
-      <div class="place_paragraphs">
+      <div class="place__paragraphs">
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
         в Мурманск.</p>
@@ -78,7 +78,7 @@
         <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">Youtube</a>
       </div>
       <img class="place__image" src="./images/altai.jpg" alt="Лес Алтая">
-      <div class="place_paragraphs">
+      <div class="place__paragraphs">
         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
@@ -91,7 +91,7 @@
         <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
       </div>
       <img class="place__image" src="./images/winterbaikal.jpg" alt="Потрескавшийся лед замерзшего Байкала">
-      <div class="place_paragraphs">
+      <div class="place__paragraphs">
         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
         <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
@@ -105,7 +105,7 @@
         <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
       </div>
       <img class="place__image" src="./images/karelia.jpg" alt="Река в Карелии">
-      <div class="place_paragraphs">
+      <div class="place__paragraphs">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
