--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
   </section>
   <section class="cover">
     <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <h2 class="cover__title">До Байкала <br />«на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </a>
-    <img class="cover__image" src="./images/train-station.jpg" alt="Железнодорожная станция">
   </section>
   <footer class="footer">
     <div class="footer__links">
