--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="header__buttons">
       <a class="header__lang-link header__lang-link_active" href="#" >Ru</a>
       <a class="header__lang-link" href="#">En</a>
-      <!-- В данных ссылках, я так понимаю, не стоит использовать target="_blank", т.к. подобные ссылки не открываются в новом окне -->
     </div>
   </header>
 <main>
@@ -126,11 +125,11 @@
   <footer class="footer">
     <nav class="footer__menu">
       <ul class="footer__links">
-        <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">©2022. Жиров Алексей</p>
